Refactor StudentService to use StudentRepository